feat: add release command

--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "build": "unbuild",
     "test": "vitest",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "release": "bumpp && pnpm publish"
   },
   "devDependencies": {
     "@debbl/eslint-config": "^3.0.0",
     "@types/node": "^20.10.5",
+    "bumpp": "^9.2.1",
     "eslint": "^8.56.0",
     "typescript": "^5.3.3",
     "unbuild": "^2.0.0",
