--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "declaration": true,
     "esModuleInterop": true,
     "skipDefaultLibCheck": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+  },
 }
