--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "starter-ts",
   "type": "module",
   "version": "0.0.0-alpha.0",
-  "packageManager": "pnpm@8.14.3",
+  "packageManager": "pnpm@8.15.4",
   "description": "",
   "author": "Brendan Dash <me@aiwan.run> (https://aiwan.run)",
   "license": "MIT",
@@ -38,20 +38,21 @@
     "dev": "rimraf dist && rollup -c && node ./dist/index.cjs",
     "build": "rimraf dist && rollup -c",
     "test": "vitest",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "release": "bumpp && pnpm publish"
   },
   "devDependencies": {
-    "@debbl/eslint-config": "^3.0.4",
-    "@types/node": "^20.11.6",
-    "bumpp": "^9.3.0",
-    "eslint": "^8.56.0",
+    "@debbl/eslint-config": "^3.0.6",
+    "@types/node": "^20.11.27",
+    "bumpp": "^9.4.0",
+    "eslint": "^8.57.0",
     "rimraf": "^5.0.5",
-    "rollup": "^4.9.6",
+    "rollup": "^4.13.0",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-esbuild": "^6.1.1",
-    "typescript": "^5.3.3",
-    "vitest": "^1.2.1"
+    "typescript": "^5.4.2",
+    "vitest": "^1.3.1"
   }
 }
