--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "release": "bumpp && pnpm publish"
+    "release": "bumpp && pnpm publish",
+    "prepare": "simple-git-hooks"
   },
   "devDependencies": {
     "@debbl/eslint-config": "^3.1.3",
@@ -51,10 +52,18 @@
     "@types/node": "^20.12.7",
     "bumpp": "^9.4.0",
     "eslint": "^8.57.0",
+    "lint-staged": "^15.2.2",
     "rimraf": "^5.0.5",
     "rollup": "^4.17.0",
     "rollup-plugin-dts": "^6.1.0",
+    "simple-git-hooks": "^2.11.1",
     "typescript": "^5.4.5",
     "vitest": "^1.5.2"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
