--- a/package.json
+++ b/package.json
@@ -38,18 +38,18 @@
     "dev": "pnpm build && node ./dist/index.cjs",
     "build": "rimraf dist && rollup -c --configPlugin typescript",
     "test": "vitest",
+    "release": "pnpm build && bumpp && pnpm publish",
     "typecheck": "tsc --noEmit",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "release": "bumpp && pnpm publish",
     "prepare": "simple-git-hooks"
   },
   "devDependencies": {
-    "@debbl/eslint-config": "^3.1.3",
+    "@debbl/eslint-config": "^3.1.5",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@types/node": "^20.12.10",
+    "@types/node": "^20.12.11",
     "bumpp": "^9.4.1",
     "eslint": "^8.57.0",
     "lint-staged": "^15.2.2",
