--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "starter-ts",
   "type": "module",
-  "version": "0.0.0-alpha.0",
-  "packageManager": "pnpm@9.1.0",
+  "version": "0.0.0",
+  "packageManager": "pnpm@9.1.4",
   "description": "",
   "author": "Brendan Dash <me@aiwan.run> (https://aiwan.run)",
   "license": "MIT",
@@ -45,17 +45,17 @@
     "prepare": "simple-git-hooks"
   },
   "devDependencies": {
-    "@debbl/eslint-config": "^3.1.5",
-    "@rollup/plugin-commonjs": "^25.0.7",
+    "@debbl/eslint-config": "^3.3.0",
+    "@rollup/plugin-commonjs": "^25.0.8",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@types/node": "^20.12.11",
+    "@types/node": "^20.14.0",
     "bumpp": "^9.4.1",
-    "eslint": "^8.57.0",
-    "lint-staged": "^15.2.2",
-    "rimraf": "^5.0.5",
-    "rollup": "^4.17.2",
-    "rollup-plugin-dts": "^6.1.0",
+    "eslint": "8.57.0",
+    "lint-staged": "^15.2.5",
+    "rimraf": "^5.0.7",
+    "rollup": "^4.18.0",
+    "rollup-plugin-dts": "^6.1.1",
     "simple-git-hooks": "^2.11.1",
     "typescript": "^5.4.5",
     "vitest": "^1.6.0"
