--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ updates:
     commit-message:
       prefix: "chore(deps)"
     groups:
-      all-dependencies:
+      all-dependencies-with-semver:
         patterns:
           - "*"
         versioning-strategy: "increase"
