chore: update deps

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "starter-ts",
   "type": "module",
   "version": "0.0.0",
-  "packageManager": "pnpm@9.5.0",
+  "packageManager": "pnpm@9.6.0",
   "description": "",
   "author": "Brendan Dash <me@aiwan.run> (https://aiwan.run)",
   "license": "MIT",
@@ -49,16 +49,16 @@
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@types/node": "^20.14.11",
-    "bumpp": "^9.4.1",
-    "eslint": "8.57.0",
-    "lint-staged": "^15.2.7",
+    "@types/node": "^22.1.0",
+    "bumpp": "^9.4.2",
+    "eslint": "^9.8.0",
+    "lint-staged": "^15.2.8",
     "rimraf": "^6.0.1",
-    "rollup": "^4.19.0",
+    "rollup": "^4.20.0",
     "rollup-plugin-dts": "^6.1.1",
     "simple-git-hooks": "^2.11.1",
-    "typescript": "^5.5.3",
-    "vitest": "^2.0.4"
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.5"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
