--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,4 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["gihub>Debbl/renovate-config:starter-template"]
+  "extends": ["github>Debbl/renovate-config:starter-template"]
 }
