--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "simple-git-hooks": "^2.11.1",
     "tsup": "^8.3.5",
     "typescript": "^5.7.3",
-    "vitest": "^2.1.8"
+    "vite": "5.2.13",
+    "vitest": "2.1.8"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
