--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "starter-ts",
   "type": "module",
   "version": "0.0.0",
-  "packageManager": "pnpm@10.12.1",
+  "packageManager": "pnpm@10.13.1",
   "description": "starter-ts",
   "author": "Brendan Dash <me@aiwan.run> (https://aiwan.run)",
   "license": "MIT",
@@ -14,25 +14,15 @@
   "bugs": "https://github.com/Debbl/starter-ts/issues",
   "keywords": [],
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
-    }
+    ".": "./dist/index.js",
+    "./package.json": "./package.json"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "typesVersions": {
-    "*": {
-      "*": [
-        "./dist/*",
-        "./dist/index.d.ts"
-      ]
-    }
-  },
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
     "dev": "pnpm build && node ./dist/index.cjs",
@@ -46,14 +36,14 @@
   },
   "devDependencies": {
     "@debbl/eslint-config": "^3.12.0",
-    "@types/node": "^24.0.0",
-    "bumpp": "^10.1.1",
-    "eslint": "^9.28.0",
-    "lint-staged": "^16.1.0",
+    "@types/node": "^24.0.14",
+    "bumpp": "^10.2.0",
+    "eslint": "^9.31.0",
+    "lint-staged": "^16.1.2",
     "simple-git-hooks": "^2.13.0",
-    "tsdown": "^0.12.7",
+    "tsdown": "^0.12.9",
     "typescript": "^5.8.3",
-    "vitest": "^3.2.3"
+    "vitest": "^3.2.4"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
