--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     },
     "resolveJsonModule": true,
     "strict": true,
+    "erasableSyntaxOnly": true,
     "strictNullChecks": true,
     "outDir": "./dist",
     "sourceMap": true,
