--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "starter-ts",
   "type": "module",
   "version": "0.0.0",
-  "packageManager": "pnpm@10.21.0",
+  "packageManager": "pnpm@10.22.0",
   "description": "starter-ts",
   "author": "Brendan Dash <me@aiwan.run> (https://aiwan.run)",
   "license": "MIT",
@@ -14,12 +14,12 @@
   "bugs": "https://github.com/Debbl/starter-ts/issues",
   "keywords": [],
   "exports": {
-    ".": "./dist/index.js",
+    ".": "./dist/index.mjs",
     "./package.json": "./package.json"
   },
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/index.mjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.mts",
   "files": [
     "dist",
     "src"
@@ -35,15 +35,15 @@
     "prepare": "simple-git-hooks"
   },
   "devDependencies": {
-    "@debbl/eslint-config": "^3.13.0",
-    "@types/node": "^24.9.1",
+    "@debbl/eslint-config": "^3.14.3",
+    "@types/node": "^24.10.1",
     "bumpp": "^10.3.1",
-    "eslint": "^9.38.0",
-    "lint-staged": "^16.2.5",
+    "eslint": "^9.39.1",
+    "lint-staged": "^16.2.7",
     "simple-git-hooks": "^2.13.1",
-    "tsdown": "^0.16.0",
+    "tsdown": "^0.16.6",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.0"
+    "vitest": "^4.0.11"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
